# FFT-Carra-Ferrario-Gentile

./: .gitignore  CMakeLists.txt  Notes.md  README.md
MPI_Cluster_Setup/: README.md  master.sh  node.sh
benchmark/: README.md  benchmark.sh  benchmark2D.sh  benchmark3D.sh  efficiency.sh  plot_efficiency.py
benchmark/efficiency/: efficiency.sh  efficiency_2D.sh  efficiency_3D.sh
benchmark/plot/: plot_efficiency.py  (+3 more)
docs/: README.md
ffft/: CMakeLists.txt
ffft/include/: ffft.hpp
ffft/include/ffft/: fftcore.hpp  spectrogram.hpp
ffft/src/fftcore/: FFTSolver.hpp
ffft/src/fftcore/Strategy/: FFTStrategy.hpp
ffft/src/fftcore/Strategy/1D/CudaFFT/: CudaCooleyTukeyFFT.cuh  CudaFFT.cuh  CudaStockhamFFT.cuh  CudaUtils.cuh  cufftFFT.cuh
ffft/src/fftcore/Strategy/1D/CudaFFT/CudaCommon/: CudaCommon.cu  CudaCommon.cuh
ffft/src/fftcore/Strategy/1D/CudaFFT/CudaCooleyTukeyFFT/: CudaCooleyTukeyFFT.cu  CudaCooleyTukeyFFT.cuh
ffft/src/fftcore/Strategy/1D/CudaFFT/CudaStockhamFFT/: CudaStockhamFFT.cu  CudaStockhamFFT.cuh
ffft/src/fftcore/Strategy/1D/MPIFFT/: MPIFFT.hpp
ffft/src/fftcore/Strategy/1D/OpenMP/: OmpFFT.hpp
ffft/src/fftcore/Strategy/1D/SequentialFFT/: SequentialFFT.hpp
ffft/src/fftcore/Strategy/1D/StockhamFFT/: StockhamFFT.hpp
ffft/src/fftcore/Strategy/1D/fftwFFT/: fftwFFT.hpp
ffft/src/fftcore/Strategy/2D/MPIFFT/: MPIFFT_2D.hpp
ffft/src/fftcore/Strategy/2D/MPIFFT_2D/: MPIFFT_2D.hpp
ffft/src/fftcore/Strategy/2D/MPI_OMP_2D/: MPI_OMP_FFT_2D.hpp
ffft/src/fftcore/Strategy/2D/OpenMP_2D/: OmpFFT_2D.hpp
ffft/src/fftcore/Strategy/2D/SequentialFFT_2D/: SequentialFFT_2D.hpp
ffft/src/fftcore/Strategy/3D/MPIFFT_3D/: MPIFFT_3D.hpp
ffft/src/fftcore/Strategy/3D/OpenMP_3D/: OmpFFT_3D.hpp  OmpFFT_3D_c.hpp
ffft/src/fftcore/Strategy/3D/SequentialFFT_3D/: SequentialFFT_3D.hpp  SequentialFFT_3D_c.hpp  SequentialFFT_3D_index.hpp
ffft/src/fftcore/Strategy/CudaFFT/: CudaFFT.cuh
ffft/src/fftcore/Strategy/MPIFFT/: MPIFFT.hpp
ffft/src/fftcore/Strategy/OpenMP/: OmpFFT.hpp
ffft/src/fftcore/Strategy/SequentialFFT/: SequentialFFT.hpp
ffft/src/fftcore/Strategy/StockhamFFT/: StockhamFFT.hpp
ffft/src/fftcore/Strategy/fftwFFT/: fftwFFT.hpp
ffft/src/fftcore/Tensor/: FreqTensor.hpp  ImageTensor.hpp  TensorFFTBase.hpp  TimeTensor.hpp
ffft/src/fftcore/Timer/: Timer.cpp  Timer.hpp
ffft/src/fftcore/utils/: FFTDataTypes.hpp  FFTUtils.hpp  MtxFilesIO.hpp  MtxFilesIOUtils.hpp
ffft/src/spectrogram/: Spectrogram.hpp  SpectrogramDataTypes.hpp  SpectrogramGenerator.hpp  plot_spectrogram.py
fft/: CMakeLists.txt
fft/src/fftcore/: FFTDataTypes.hpp  FFTEngine.hpp  FFTSolver.hpp  FFTStrategy.hpp  ImageTensor.hpp  MPIFFT.hpp  SequentialFFT.hpp  TensorFFTBase.hpp  TimeTensor.hpp  Timer.hpp  fftwFFT.hpp  main.cpp
fft/src/fftcore/Strategy/: FFTStrategy.hpp
fft/src/fftcore/Strategy/MPIFFT/: MPIFFT.hpp
fft/src/fftcore/Strategy/SequentialFFT/: SequentialFFT.hpp
fft/src/fftcore/Strategy/fftwFFT/: fftwFFT.hpp
fft/src/fftcore/Tensor/: FreqTensor.hpp  ImageTensor.hpp  TensorFFTBase.hpp
fft/src/fftcore/Timer/: Timer.cpp  Timer.hpp
fft/src/fftcore/utils/: EigenTensorFilesIO.hpp  FFTDataTypes.hpp  FFTUtils.hpp  MtxFilesIO.hpp  MtxFilesIOUtils.hpp
papers/: QA  links
sandbox/ferra_sandbox/: CMakeLists.txt  FFTDataTypes.hpp  main  main.cpp  my_program  overload.cpp  some_tests.cpp  tensorLoading.hpp  tensors_main.cpp  test.cpp
spectrogram/: CMakeLists.txt  README.md  Spectrogram.hpp  SpectrogramDataTypes.hpp  plot_spectrogram.py  spectrogram_main.cpp
spectrogram/output/: spectrogram_0.txt  spectrogram_1.txt  spectrogram_2.txt  spectrogram_3.txt  spectrogram_4.txt  spectrogram_5.txt  spectrogram_6.txt  spectrogram_7.txt  spectrogram_8.txt  spectrogram_9.txt
test/: CMakeLists.txt  test_template.hpp  test_template_MPI.hpp
test/1D/CUDA/: test_CUDA.cu
test/1D/MPI/: test_MPI.cpp  test_MPI_sandbox.cpp
test/1D/OMP/: test_OMP.cpp
test/1D/sequential/: test_sequential.cpp
test/1D/stockham/: test_stockham.cpp
test/2D/MPI_2D/: test_MPI_2D.cpp
test/2D/MPI_OMP_2D/: test_MPI_OMP_2D.cpp
test/2D/OMP_2D/: test_OMP_2D.cpp
test/2D/sequential_2D/: test_sequential_2D.cpp
test/3D/MPI_3D/: test_MPI_3D.cpp
test/3D/OMP_3D/: test_OMP_3D.cpp
test/3D/sequential_3D/: test_sequential_3D.cpp
test/CUDA/: test_CUDA.cpp  test_CUDA.cu
test/MPI/: test_MPI.cpp
test/OMP/: test_OMP.cpp
test/OMP_2D/: test_OMP_2D.cpp
test/sequential/: test_sequential.cpp
test/sequential_2D/: test_sequential_2D.cpp
test/sequential_3D/: test_sequential_3D.cpp
test/spectrogram/: spectrogram_main.cpp
test/stockham/: test_stockham.cpp
zazam/: CMakeLists.txt  README.md
zazam/examples/: identify.cpp  record.cpp  sequence.cpp
zazam/examples/dataset/hashes/: Amazing.mtx  Anastasia.mtx  Another Brick In The Wall, Pt.mtx  Another One Bites The Dust - Remastered 2011.mtx  Back In Black.mtx  Bohemian Rhapsody - Remastered 2011.mtx  Californication.mtx  Can't Stop Lovin' You.mtx  Crazy Train.mtx  Crazy.mtx  D'yer Mak'er - Remaster.mtx  Don't Cry (Original).mtx  Don't Stop Me Now - Remastered 2011.mtx  Enter Sandman.mtx  Fade To Black - Remastered.mtx  Fear of the Dark - 2015 Remaster.mtx  For Whom The Bell Tolls - Remastered.mtx  Here I Go Again - 2018 Remaster.mtx  Highway to Hell.mtx  Hotel California - 2013 Remaster.mtx  I Don't Want To Miss A Thing - From "Armageddon" Soundtrack.mtx  Iron Man (2009 - Remaster).mtx  It's My Life.mtx  Knockin' On Heaven's Door.mtx  Livin' On A Prayer.mtx  Love Of My Life - Remastered 2011.mtx  Nothing Else Matters.mtx  November Rain.mtx  One.mtx  Paradise City.mtx  Paranoid (2009 - Remaster).mtx  Rock And Roll All Nite.mtx  Rock You Like a Hurricane - 2011.mtx  Sad But True.mtx  Stairway to Heaven - Remaster.mtx  Sweet Child O' Mine.mtx  Symphony Of Destruction.mtx  T.mtx  The Final Countdown.mtx  The Trooper - 2015 Remaster.mtx  (+8 more)
zazam/src/core/: HashGenerator.cpp  HashGenerator.hpp  Identificator.cpp  Identificator.hpp  Sequencer.cpp  Sequencer.hpp
zazam/src/core/utils/: MusicTensor.hpp  Utils.hpp  ZazamDataTypes.hpp
zazam/src/realtime/: Recorder.hpp
(+542 files in other folders)
